body title update

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <title>Todo Node Backend</title>
 </head>
 <body>
-    <h3>This is backend for Todo React Demo App! To get all todos, go to /todos</h3>
+    <h3>This is backend for Todo React Demo App! To get all todos, go to /todos.</h3>
 </body>
 </html>
