--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!--index.html-->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo Node Backend</title>
-</head>
-<body>
-    <h3>This is backend for Todo React Demo App! To get all todos, go to /todos.</h3>
-</body>
+  </head>
+  <body>
+    <h3>
+      This is backend for Todo React Demo App! To get all todos, go to /todos.
+    </h3>
+  </body>
 </html>
