some test route

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,13 @@
     <title>Todo Node Backend</title>
   </head>
   <body>
-    <h3>
-      This is backend for Todo React Demo App! To get all todos, go to /todos.
-    </h3>
+    <div>
+      <h3>
+        This is backend for Todo React Demo App!
+      </h3>
+      <p>
+        To get all todos, go to /todos.
+      </p>
+    </div>
   </body>
 </html>
